# cv-gpu-object-detection

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  baseline.py  config.json  render.py
benchmark/: CMakeLists.txt  benchmark.cpp  benchmark.cu  utils.hpp
ext/: CMakeLists.txt
include/: CMakeLists.txt  CPU_ops.hpp  GPU_ops.cuh  img_ops.hpp  pipeline.hpp
src/: CMakeLists.txt  bbox.cpp  binary.cpp  components.cpp  difference.cpp  gaussian.cpp  grayscale.cpp  main.cpp  morphology.cpp  pipeline.cpp  pipeline.cu
src/cpu/: bbox.cpp  binary.cpp  components.cpp  difference.cpp  gaussian.cpp  grayscale.cpp  morphology.cpp
src/gpu/: bbox.cu  binary.cu  components.cu  difference.cu  gaussian.cu  grayscale.cu  morphology.cu
